# autopilot

./: .coverage  .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
autopilot/: cli.py  init_project.py
autopilot/agents/: coder.md  compact_knowledge.md  doc_gen.md  fixer.md  interview_extractor.py  interviewer.md  loader.py  planner.md  reviewer.md  tester.md
autopilot/backends/: __init__.py  base.py  claude_code.py  codex.py  opencode.py
autopilot/handoff/: __init__.py  loader.py  models.py  writer.py
autopilot/knowledge/: compactor.py  global_knowledge.py  graph.py  local.py  zep.py
autopilot/notifications/: telegram.py
autopilot/pipeline/: config.py  context.py  engine.py  phases.py  retry.py  worker.py
autopilot/principles/: __init__.py  loader.py
autopilot/sessions/: reader.py  recorder.py
autopilot/skills/: __init__.py  registry.py  runner.py
autopilot/tui/: app.py  commands.py  event_bus.py  i18n.py
scripts/: debug.sh  run.sh
tests/: conftest.py  test_agent_loader.py  test_answers.py  test_backend_claude.py  test_backend_codex.py  test_backend_fallback.py  test_backend_opencode.py  test_backends.py  test_cli.py  test_compaction.py  test_engine_compaction.py  test_engine_retry.py  test_global_knowledge.py  test_handoff.py  test_init.py  test_interview_extractor.py  test_knowledge.py  test_knowledge_graph.py  test_mission_store.py  test_models.py  test_pipeline_engine.py  test_pipeline_phases.py  test_principles.py  test_run_result.py  test_skills.py  test_telegram.py  test_timeout.py  test_toposort.py
(+13 files in other folders)
