[project]
name = "autopilot-ai"
version = "0.3.4"
description = "AI coding automation engine"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "httpx>=0.27",
    "toml>=0.10",
    "rich>=14.3.3",
    "textual>=0.80",
]

[project.scripts]
ap = "autopilot.cli:main"
autopilot = "autopilot.tui.app:launch"

[tool.hatch.build.targets.wheel]
packages = ["autopilot"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
